--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
   <groupId>com.zakrywilson.astro.tle</groupId>
   <artifactId>tle</artifactId>
   <version>1.0</version>
-  <packaging>jar</packaging>
   <name>TLE</name>
   <description>A package for parsing, formatting, and building TLEs</description>
   <url>https://github.com/zakrywilson/TLE</url>
@@ -21,22 +20,19 @@
   </developers>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.encoding>UTF-8</project.encoding>
+    <project.java.version>1.8</project.java.version>
+    <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
+    <maven.compiler.source>${project.java.version}</maven.compiler.source>
+    <maven.compiler.target>${project.java.version}</maven.compiler.target>
   </properties>
 
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
+        <version>3.0.2</version>
         <configuration>
           <archive>
             <manifest>
@@ -49,6 +45,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.10.4</version>
         <executions>
           <execution>
             <goals>
@@ -60,6 +57,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
+        <version>3.0.1</version>
         <executions>
           <execution>
             <goals>
